turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: STOP is already defined as value STOP
val STOP:Int = 0
    ^Turmite:4: error: STOP  is already defined as value STOP
val STOP:Int = 0
    ^Turmite:23: error: not found: value MVT_SUIVANT
  rule(state)(a)(MVT_SUIVANT) match {
                 ^